<?xml version="1.0"?>
<package format="3">
  <name>ap_closed_chain_planning</name>
  <version>0.0.0</version>
  <description>For using closed chain planning via IK solving</description>

  <maintainer email="adam.pettinger@utexas.edu">Adam Pettinger</maintainer>

  <license>Proprietary, see attached</license>

  <author email="adam.pettinger@utexas.edu">Adam Pettinger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>affordance_primitive_msgs</depend>
  <depend>affordance_primitives</depend>
  <depend>bio_ik</depend>
  <depend>moveit_core</depend>
  <depend>pluginlib</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>catkin</build_type>
    <ap_closed_chain_planning plugin="${prefix}/plugins.xml" />
  </export>
</package>
