<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sample_based_planning</name>
  <version>0.0.0</version>
  <description>OMPL interface for screw AP planning</description>
  <maintainer email="adam.pettinger@utexas.edu">Adam Pettinger</maintainer>
  <license>Proprietary, see attached</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>affordance_primitives</depend>
  <depend>ompl</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_visual_tools</depend>
  <depend>roscpp</depend>
  <depend>tf2_eigen</depend>

  <exec_depend>panda_moveit_config</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
